# Qwen_IR

./: .gitignore  README.md  fusion_config.py  pyproject.toml  requirements.txt  实施计划.md
config/: README.md  infer_qwen_prompt.yml  qwen_temperature_0611_sample.json  tpgdiff_fewshot_qwen3vl.yml
config/test/: batch.yml
config/test/A/: A0.yml  A0z.yml  A1.yml  A2.yml  A3.yml  A4.yml
config/test/G/: G0.yml
config/test/R/: R0.yml  R1.yml  R2.yml  R3.yml
config/train/A/: A0.yml  A0z.yml  A1.yml  A2.yml  A3.yml  A4.yml
config/train/G/: G0.yml
config/train/R/: R0.yml  R1.yml  R2.yml  R3.yml
config/train/legacy/: sample.yml  (+1 more)
dataset/: README.md  __init__.py
module/: __init__.py
module/backbone/: __init__.py  tpgd_assess_unet.py
module/degradation_prompt/: __init__.py  assess_adapter.py  hidden_io.py  qwen_degradation.py
module/layout_prompt/: __init__.py  qwen_prompt_adapter.py  schema.py
module/legacy/: __init__.py  source_paths.py
module/pipeline/: __init__.py  assess_tpgd.py
module/qwen/: __init__.py  export_tpgdiff_qwen_structured_dataset.py  run_tpgdiff_fewshot_qwen3vl.py  validate_tpgdiff_final_schema.py
module/runtime/: __init__.py  base.py  paths.py
script/: calibrate_qwen_prior.py  draw_assess_tpgd_models.py  export_qwen_structured_dataset.py  materialize_qwen_prior_cache.py  run_qwen_fewshot.py  run_qwen_prompt_infer.py  run_test.bash  run_train.bash  run_train_sequence.bash  test_assess_tpgd.py  train_assess_tpgd.py
tests/: test_confidence_gate.py  test_prediction_target.py  test_prior_variants.py  test_structured_prior_v2.py
(+2 files in other folders)
